--- a/BitTracking/app/views/editprofile.scala.html
+++ b/BitTracking/app/views/editprofile.scala.html
@@ -39,7 +39,7 @@
                                                 <div class="col-md-12">
                                                     <div class="text-center">
 
-                                                        <img src="http://placehold.it/100x100" class="avatar img-circle" alt="avatar">
+                                                        <img src="@routes.Assets.versioned(image.image_url)" class="avatar img-circle" alt="avatar">
                                                         <h6>Upload a different photo...</h6>
 
                                                         <input type="file" name="picture" class="form-control" accept="image/*">
